@@ -1,3 +1,8 @@
+2005-04-16  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* fink-mirrors.info.in: allow multiple replacements of @PREFIX@
+	* postinstall.pl.in: back up fink.conf before updating configuration
+
 2005-03-03  Daniel Macks  <dmacks@netspace.org>
 
 	* postinstall.pl.in: Automatic compatibility for when enhanced
